# PortfolioCoreV1

./: .gitignore  .pre-commit-config.yaml  README.md  locustfile.py  mypy.ini  pyproject.toml  run_ruff.cmd
migrations/: env.py
migrations/versions/: 17d402f0c2d6_add_users.py  22d84aa83ff0_fix_user.py  55cd5d41c17c_init_migration.py  dfab4ab0908e_change_roles.py  f0ed9289905e_add_uniq_on_title.py
src/: config.py  container.py  context.py  main.py
src/application/: authorize.py
src/application/interfaces/: credentials.py  unit_of_work.py
src/application/interfaces/clients/: cache.py
src/application/interfaces/repositories/: auth.py  posts.py  project_repo.py  projects.py  tokens.py  users.py
src/application/interfaces/services/: auth.py
src/application/interfaces/uow/: project_uow.py  users.py
src/application/services/: posts.py  projects.py
src/application/usecases/: abs.py  add_project.py  login.py  register_user.py  update_token.py
src/application/usecases/posts/: create.py  create_post.py  get.py  get_posts.py  rate.py
src/application/usecases/projects/: add_project.py  create.py  get.py
src/application/usecases/users/: register_user.py
src/domain/: utils.py
src/domain/entities/: base.py  post.py  project.py  tokens.py  user.py
src/domain/exceptions/: auth.py  base.py
src/domain/filters/: base.py  posts.py  project.py  projects.py  users.py
src/domain/value_objects/: auth.py
src/infrastructure/: abstract.py  credentials.py  database.py  unit_of_work.py
src/infrastructure/clients/: cache.py  redis.py
src/infrastructure/models/: __init__.py  auth.py  base.py  mapping.py  project.py  projectmodel.py  user.py
src/infrastructure/repositories/: alchemy_mixin.py  posts.py  projects.py  tokens.py  user.py  users.py
src/infrastructure/schemas/: post.py  project.py  user.py
src/infrastructure/services/: auth.py
src/infrastructure/uow/: project.py
src/presentation/http/: dependencies.py
src/presentation/http/auth/: dependencies.py  router.py
src/presentation/http/dependencies/: auth.py  projects.py
src/presentation/http/posts/: router.py
src/presentation/http/projects/: router.py
tests/: example_test.py
(+5 files in other folders)
